--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -8,90 +8,120 @@
   src: url(../fonts/PlayfairDisplay-ExtraBold.ttf);
 }
 
-*{
-    padding: 0;
-    margin: 0;
+* {
+  padding: 0;
+  margin: 0;
 }
-*::selection{
-    background: #000101;
-    color: #fefeff;
+*::selection {
+  background: #000101;
+  color: #fefeff;
 }
-html{
-    scroll-behavior: smooth;
+html {
+  scroll-behavior: smooth;
 }
-body{
-    font-family: "font-reg", serif;
-    background:#000101;
-    color: #fefeff;
-    transition: 1.5s ease-in-out; 
-}
-
-h2{
-    font-size: calc(3rem + 5vw);
-    text-align: center;
-    color: rgb(217,217,217);
-    font-family: "font-bold", serif;
-    letter-spacing: 3px;
-}
-.title{
-    font-size: calc(1.5rem + 5vw);
-    letter-spacing: 0;
+body {
+  font-family: "font-reg", serif;
+  background: #000101;
+  color: #fefeff;
+  transition: 1.5s ease-in-out;
 }
 
-span{
-    display: inline-block;
+h2 {
+  font-size: calc(3rem + 5vw);
+  text-align: center;
+  color: rgb(217, 217, 217);
+  font-family: "font-bold", serif;
+  letter-spacing: 3px;
 }
-a, a:visited{
-    cursor: pointer;
-    position: relative;
-    text-decoration: none;
-    color: #fefeff;
-    transition: 0.1s linear;
-    font-style: calc(0.8rem + 0.8vw);
+.title {
+  font-size: calc(1.5rem + 5vw);
+  letter-spacing: 0;
 }
-a::after{
-    content: "";
-    position: absolute;
-    width: 100%;
-    background: #fefeff;
-    height: 1px;
-    bottom: -4px;
-    left: 0;
-    transform-origin: left;
+
+span {
+  display: inline-block;
 }
-a:hover{
-    transform: scale(1.04);
-    color: rgb(217,217,217);
+a,
+a:visited {
+  cursor: pointer;
+  position: relative;
+  text-decoration: none;
+  color: #fefeff;
+  transition: 0.1s linear;
+  font-style: calc(0.8rem + 0.8vw);
 }
-a:hover::after{
-    animation: animLink 1.4s infinite ease-in-out;
+a::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  background: #fefeff;
+  height: 1px;
+  bottom: -4px;
+  left: 0;
+  transform-origin: left;
+}
+a:hover {
+  transform: scale(1.04);
+  color: rgb(217, 217, 217);
+}
+a:hover::after {
+  animation: animLink 1.4s infinite ease-in-out;
 }
 @keyframes animLink {
-    50%{
-        transform: scaleX(0.2);
-    }
-    100%{
-        transform: scaleX(1);
-    }
+  50% {
+    transform: scaleX(0.2);
+  }
+  100% {
+    transform: scaleX(1);
+  }
 }
-.img{
-    height: 395px;
-    width: 100vw;
-    max-width: 395px;
-    margin: 0 auto;
-    filter: grayscale(100%);
-    transition: 1.6s;
+.img {
+  height: 395px;
+  width: 100vw;
+  max-width: 395px;
+  margin: 0 auto;
+  filter: grayscale(100%);
+  transition: 1.6s;
 }
-.img:hover{
-    filter: grayscale(10%);
+.img:hover {
+  filter: grayscale(10%);
 }
-.line{
-    height: 2px;
-    width: 70%;
-    margin: 0 auto;
-    background: #000101;
-    transition: 1s cubic-bezier(0.77,0,0.18,1);
-    transform-origin: left;
-    transition-delay: 0.65s;
+.line {
+  height: 2px;
+  width: 70%;
+  margin: 0 auto;
+  background: #000101;
+  transition: 1s cubic-bezier(0.77, 0, 0.18, 1);
+  transform-origin: left;
+  transition-delay: 0.65s;
 }
-/* Paramètres par ordre d'apparition *
+/* Paramètres par ordre d'apparition */
+header {
+  height: 100vh;
+  position: relative;
+  margin: 2vw 2vw 0;
+}
+.links {
+  display: flex;
+  justify-content: space-between;
+}
+h1 {
+  font-size: calc(1.4rem + 8vw);
+  margin-top: 70px;
+  font-family: "font-bold", serif;
+  letter-spacing: 6px;
+  color: #fefeff;
+}
+header h2 {
+  font-size: calc(1rem + 6.5vw);
+  margin: 18px 0;
+  text-align: left;
+}
+.scroll-wrapper {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: 3.5vw;
+  color: rgb(217, 217, 217);
+  font-size: calc(0.8rem + 0.5vw);
+}
