Section portfolio + expertise CSS

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -125,3 +125,85 @@ header h2 {
   color: rgb(217, 217, 217);
   font-size: calc(0.8rem + 0.5vw);
 }
+.about {
+  margin: 400px 0 250px;
+}
+.img1 {
+  background: url(../img/bill-gates-1.jpg) top/cover;
+}
+.h2-wrapper {
+  mix-blend-mode: exclusion;
+  margin: -220px 0 200px;
+}
+.about p {
+  width: 70px;
+  min-width: 280px;
+  text-align: center;
+  margin: 0 auto;
+  line-height: calc(7px + 4.5vw);
+  font-size: calc(1rem + 1vw);
+  letter-spacing: 1px;
+}
+.skills {
+  margin: 200px 0 250px;
+}
+.skills h2 {
+  margin-bottom: 150px;
+}
+.skills .wrapper {
+  margin: 30px 0;
+}
+.skills .appear {
+  text-align: center;
+}
+.skills p {
+  font-size: calc(1rem + 6vw);
+  font-family: "font-bold", serif;
+  letter-spacing: 4px;
+  background: #000101;
+  color: #fefeff;
+  display: inline-block;
+  padding: 0 12px 12px;
+}
+.portfolio {
+  margin: 200px 0;
+}
+.projects-container {
+  margin-top: 100px;
+}
+.project {
+  position: relative;
+  width: 60vw;
+  max-width: 600px;
+}
+/* #p1 {
+  margin-left: 8vw;
+} */
+#p2 {
+  margin: 0 6vw 0 auto;
+}
+#p3 {
+  margin-left: 8vw;
+}
+.project img {
+  transition: 0.4s ease-out;
+  width: 100%;
+}
+.project:hover img {
+  filter: brightness(20%);
+}
+.project-infos {
+  position: absolute;
+  top: 50%;
+  transform: translate(-50px, -50%);
+  margin-left: 8vw;
+  transition: 0.4s ease-out;
+}
+.project-infos a {
+  font-size: calc(1rem + 3vw);
+}
+.project-infos p {
+  font-size: 2rem;
+  margin-top: 1.5vw;
+  color: #fefeff;
+}
