--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -175,6 +175,7 @@ header h2 {
   position: relative;
   width: 60vw;
   max-width: 600px;
+  margin: 50px 5vw;
 }
 /* #p1 {
   margin-left: 8vw;
@@ -192,12 +193,17 @@ header h2 {
 .project:hover img {
   filter: brightness(20%);
 }
+.project:hover .project-infos {
+  opacity: 1;
+  transform: translate(0, -50%);
+}
 .project-infos {
   position: absolute;
   top: 50%;
   transform: translate(-50px, -50%);
   margin-left: 8vw;
   transition: 0.4s ease-out;
+  opacity: 0;
 }
 .project-infos a {
   font-size: calc(1rem + 3vw);
@@ -206,4 +212,21 @@ header h2 {
   font-size: 2rem;
   margin-top: 1.5vw;
   color: #fefeff;
+}
+/* FOOTER */
+footer {
+  margin: 150px 0 120px;
+}
+footer p {
+  font-size: calc(1rem + 2vw);
+  margin: 25px 0;
+  text-align: center;
+}
+footer a {
+  font-family: "font-bold", serif;
+  color: #000101;
+  font-size: calc(1rem + 2vw);
+}
+.img2 {
+  background: url(../img/bill-gates-2.jpg) center/cover;
 }
