--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -13,17 +13,17 @@
   margin: 0;
 }
 *::selection {
-  background: #000101;
-  color: #fefeff;
+  background: #d2d2eb;
+  color: #f0eee9;
 }
 html {
   scroll-behavior: smooth;
 }
 body {
   font-family: "font-reg", serif;
-  background: #000101;
-  color: #fefeff;
-  transition: 1.5s ease-in-out;
+  background: #d2d2eb;
+  color: #f0eee9;
+  transition: 0.7s ease-in-out;
 }
 .wrapper {
   perspective: 900px;
@@ -40,7 +40,6 @@ body {
   opacity: 1;
   transform: none;
 }
-
 h2 {
   font-size: calc(3rem + 5vw);
   text-align: center;
@@ -52,7 +51,6 @@ h2 {
   font-size: calc(1.5rem + 5vw);
   letter-spacing: 0;
 }
-
 span {
   display: inline-block;
 }
@@ -63,7 +61,7 @@ a:visited {
   text-decoration: none;
   color: #fefeff;
   transition: 0.1s linear;
-  font-style: calc(0.8rem + 0.8vw);
+  font-size: calc(0.8rem + 0.8vw);
 }
 a::after {
   content: "";
@@ -91,7 +89,7 @@ a:hover::after {
   }
 }
 .img {
-  height: 395px;
+  height: 1000px;
   width: 100vw;
   max-width: 395px;
   margin: 0 auto;
@@ -107,7 +105,6 @@ a:hover::after {
   margin: 0 auto;
   background: #000101;
   transition: 1s cubic-bezier(0.77, 0, 0.18, 1);
-  /* transform-origin: left; */
   transition-delay: 0.45s;
   opacity: 0;
   transform: scaleX(0);
@@ -131,7 +128,7 @@ header {
   transition-delay: 0.3s;
 }
 h1 {
-  font-size: calc(1.4rem + 8vw);
+  font-size: calc(2rem + 8vw);
   margin-top: 70px;
   font-family: "font-bold", serif;
   letter-spacing: 6px;
@@ -167,7 +164,7 @@ header h2 {
   margin: -220px 0 200px;
 }
 .about p {
-  width: 70px;
+  width: 70%;
   min-width: 280px;
   text-align: center;
   margin: 0 auto;
@@ -205,8 +202,8 @@ header h2 {
 }
 .project {
   position: relative;
-  width: 60vw;
-  max-width: 600px;
+  width: 70vw;
+  max-width: 900px;
   margin: 50px 5vw;
 }
 .project::before {
@@ -215,7 +212,7 @@ header h2 {
   height: 110%;
   width: 100%;
   top: -3px;
-  background: #fefeff;
+  background: #d2d2eb;
   transition: width 1s ease-out;
   transition-delay: 0.85s;
 }
@@ -255,6 +252,7 @@ header h2 {
   margin-top: 1.5vw;
   color: #fefeff;
 }
+
 /* FOOTER */
 footer {
   margin: 150px 0 120px;
@@ -264,11 +262,21 @@ footer p {
   margin: 25px 0;
   text-align: center;
 }
+#l2 {
+  transition-delay: 1.2s;
+}
+#l3 {
+  transition-delay: 1.6s;
+}
 footer a {
   font-family: "font-bold", serif;
   color: #000101;
   font-size: calc(1rem + 2vw);
 }
-.img2 {
-  background: url(../img/bill-gates-2.jpg) center/cover;
+
+#cv {
+  position: relative;
+  width: 60vw;
+  max-width: 600px;
+  margin: 0 auto;
 }
