--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -90,7 +90,7 @@ a:hover::after {
   }
 }
 .img {
-  height: 395px;
+  height: 700px;
   width: 100vw;
   max-width: 395px;
   margin: 0 auto;
@@ -158,7 +158,7 @@ header h2 {
   margin: 400px 0 250px;
 }
 .img1 {
-  background: url(../img/bill-gates-1.jpg) top/cover;
+  background: url(../img/moi.JPG) top/cover;
 }
 .h2-wrapper {
   mix-blend-mode: exclusion;
