--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -249,10 +249,10 @@ header h2 {
   opacity: 0;
 }
 .project-infos a {
-  font-size: calc(1rem + 3vw);
+  font-size: calc(0.8rem + 2vw);
 }
 .project-infos p {
-  font-size: 2rem;
+  /* font-size: 2rem; */
   margin-top: 1.5vw;
   color: #fefeff;
 }
@@ -272,7 +272,7 @@ footer p {
 }
 footer a {
   font-family: "font-bold", serif;
-  color: #000101;
+  color: #fefeff;
   font-size: calc(1rem + 2vw);
 }
 #cv {
